# lh-plugin-demo

./: .gitignore  .hlint.yaml  README.md  cabal.project  cabal.project.github  lh-demo.cabal  lh-plugin-demo.cabal  stack.yaml  stack.yaml.github
.github/workflows/: cabal.yml  hlint.yml  stack.yml
src/Demo/: Bug.hs  Client.hs  Erase.hs  FocusSubtype.hs  Lib.hs  Maps.hs  Sort.hs  Test.hs  Total.hs  Vectors.hs
stack/: stack-8.10.7.yaml  stack-9.0.2.yaml  stack-9.10.3.yaml  stack-9.12.2.yaml  stack-9.2.5.yaml  stack-9.2.8.yaml  stack-9.4.7.yaml  stack-9.6.3.yaml  stack-9.8.1.yaml
